--- a/Analisando_os_Dados_do_Airbnb.ipynb
+++ b/Analisando_os_Dados_do_Airbnb.ipynb
@@ -58,7 +58,7 @@
       "source": [
         "## Obtenção dos Dados\n",
         "\n",
-        "Todos os dados utilizado foram obtidos atravé do site [Inside Airbnb](http://insideairbnb.com/)\n",
+        "Todos os dados utilizado foram obtidos através do site [Inside Airbnb](http://insideairbnb.com/)\n",
         "\n",
         "\n",
         "\n",
@@ -71,7 +71,10 @@
       "metadata": {
         "colab_type": "code",
         "id": "vLIBnefmjJYo",
-        "colab": {}
+        "outputId": "f34461f2-2d1d-4949-b4c6-40b35b15dbc8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "# importar os pacotes necessarios\n",
@@ -82,7 +85,16 @@
         "%matplotlib inline"
       ],
       "execution_count": 0,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/statsmodels/tools/_testing.py:19: FutureWarning: pandas.util.testing is deprecated. Use the functions in the public API at pandas.testing instead.\n",
+            "  import pandas.util.testing as tm\n"
+          ],
+          "name": "stderr"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -143,7 +155,7 @@
       "metadata": {
         "id": "2iS_dae7YQtO",
         "colab_type": "code",
-        "outputId": "ead85439-4ecc-4c29-c79c-87d54f3e094f",
+        "outputId": "335d3cd4-17ce-45b6-fb26-51cfde6314f8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 646
@@ -202,7 +214,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 7
+          "execution_count": 3
         }
       ]
     },
@@ -404,18 +416,18 @@
       "metadata": {
         "id": "9VQhLjglOPU2",
         "colab_type": "code",
+        "outputId": "0d7a7e6b-58ee-47df-a6e0-b65fbad30a32",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 297
-        },
-        "outputId": "0d7a7e6b-58ee-47df-a6e0-b65fbad30a32"
+        }
       },
       "source": [
         "# ver o resumo estatístico das variáveis numéricas\n",
         "df[['price', 'minimum_nights', 'number_of_reviews', 'reviews_per_month',\n",
         "    'calculated_host_listings_count', 'availability_365']].describe()"
       ],
-      "execution_count": 11,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -565,11 +577,11 @@
       "metadata": {
         "id": "KrZOIXdHWcZQ",
         "colab_type": "code",
+        "outputId": "6d534df7-45d5-4803-d560-acc12bf3849b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 245
-        },
-        "outputId": "6d534df7-45d5-4803-d560-acc12bf3849b"
+        }
       },
       "source": [
         "# minimum_nights\n",
@@ -580,7 +592,7 @@
         "print(\"{} valores acima de 30 entradas\".format(len(df[df.minimum_nights > 30])))\n",
         "print(\"{:.4f}%\".format((len(df[df.minimum_nights > 30]) / df.shape[0])*100))"
       ],
-      "execution_count": 67,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -621,11 +633,11 @@
       "metadata": {
         "id": "jbtJcAGBXTyZ",
         "colab_type": "code",
+        "outputId": "076512f0-51fd-47bb-d2e2-fb1bcaeeb766",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 607
-        },
-        "outputId": "076512f0-51fd-47bb-d2e2-fb1bcaeeb766"
+        }
       },
       "source": [
         "# remover os *outliers* em um novo DataFrame\n",
@@ -639,7 +651,7 @@
         "# plotar o histograma para as variáveis numéricas\n",
         "df_clean.hist(bins=15, figsize=(15,10));\n"
       ],
-      "execution_count": 13,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -672,11 +684,11 @@
       "metadata": {
         "id": "ff-8gUahLk-C",
         "colab_type": "code",
+        "outputId": "f570d214-cf70-4704-d4d2-50829f0ec477",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
-        },
-        "outputId": "f570d214-cf70-4704-d4d2-50829f0ec477"
+        }
       },
       "source": [
         "# ver a média da coluna `price``\n",
@@ -684,7 +696,7 @@
         "\n",
         "print(\"Média sem a limpeza:\", \"R$ {:.2f}\".format(df.price.mean()))\n"
       ],
-      "execution_count": 52,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -718,11 +730,11 @@
       "metadata": {
         "id": "x2ayzBajqxyd",
         "colab_type": "code",
+        "outputId": "f13e7f4a-b2e1-47c9-d296-2a127575bdf7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 235
-        },
-        "outputId": "f13e7f4a-b2e1-47c9-d296-2a127575bdf7"
+        }
       },
       "source": [
         "# criar uma matriz de correlação\n",
@@ -731,7 +743,7 @@
         "# mostrar a matriz de correlação\n",
         "display(corr)"
       ],
-      "execution_count": 53,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -845,17 +857,17 @@
       "metadata": {
         "id": "91UujDr6ueqE",
         "colab_type": "code",
+        "outputId": "b7902f03-c16e-4f12-f863-2d96ebda10d7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 411
-        },
-        "outputId": "b7902f03-c16e-4f12-f863-2d96ebda10d7"
+        }
       },
       "source": [
         "# plotar um heatmap a partir das correlações\n",
         "sns.heatmap(corr, cmap='RdBu', fmt='.2f', square=True, linecolor='white', annot=True);"
       ],
-      "execution_count": 54,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -889,17 +901,17 @@
       "metadata": {
         "id": "ueLPNWvPHgfB",
         "colab_type": "code",
+        "outputId": "2fc30069-c051-4819-95d4-878e44007e9f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 102
-        },
-        "outputId": "2fc30069-c051-4819-95d4-878e44007e9f"
+        }
       },
       "source": [
         "# mostrar a quantidade de cada tipo de imóvel disponível\n",
         "df_clean.room_type.value_counts()"
       ],
-      "execution_count": 55,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -924,17 +936,17 @@
       "metadata": {
         "id": "EvwoO-XAHhIm",
         "colab_type": "code",
+        "outputId": "167ea233-a100-4193-bbca-48e3dd1c970f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 102
-        },
-        "outputId": "167ea233-a100-4193-bbca-48e3dd1c970f"
+        }
       },
       "source": [
         "# mostrar a porcentagem de cada tipo de imóvel disponível\n",
         "df_clean.room_type.value_counts() / df_clean.shape[0]"
       ],
-      "execution_count": 56,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -971,17 +983,17 @@
       "metadata": {
         "id": "MD_xa143JZpi",
         "colab_type": "code",
+        "outputId": "216f0dfd-f384-492b-c494-aff1cd94f97e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 221
-        },
-        "outputId": "216f0dfd-f384-492b-c494-aff1cd94f97e"
+        }
       },
       "source": [
         "# ver preços por bairros, na média\n",
         "df_clean.groupby(['neighbourhood']).price.mean().sort_values(ascending=False)[:10]"
       ],
-      "execution_count": 58,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1025,11 +1037,11 @@
       "metadata": {
         "id": "Mi18A_8Lhqy5",
         "colab_type": "code",
+        "outputId": "57f20a8e-2271-4658-e5fc-54152165506c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 264
-        },
-        "outputId": "57f20a8e-2271-4658-e5fc-54152165506c"
+        }
       },
       "source": [
         "# ver quantidade de imóveis no Complexo do Alemão\n",
@@ -1038,7 +1050,7 @@
         "# ver as 4 entradas do Complexo do Alemão\n",
         "df[df.neighbourhood == \"Complexo do Alemão\"]"
       ],
-      "execution_count": 59,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1180,18 +1192,18 @@
       "metadata": {
         "id": "UxVJqJ_3W59I",
         "colab_type": "code",
+        "outputId": "1d6f65a5-8a41-4971-8774-199a21db6609",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 472
-        },
-        "outputId": "1d6f65a5-8a41-4971-8774-199a21db6609"
+        }
       },
       "source": [
         "# plotar os imóveis pela latitude-longitude\n",
         "df_clean.plot(kind=\"scatter\", x='longitude', y='latitude', alpha=0.4, c=df_clean['price'], s=8,\n",
         "              cmap=plt.get_cmap('jet'), figsize=(12,8));"
       ],
-      "execution_count": 60,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1222,17 +1234,17 @@
       "metadata": {
         "id": "_VzNhrEgY82N",
         "colab_type": "code",
+        "outputId": "f5ad288c-234e-476c-bca2-3057f031dc86",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "f5ad288c-234e-476c-bca2-3057f031dc86"
+        }
       },
       "source": [
         "# ver a média da coluna `minimum_nights`\n",
         "print(\"Média:\", df[df.minimum_nights < 15].minimum_nights.mean())"
       ],
-      "execution_count": 64,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1262,7 +1274,7 @@
       "source": [
         "Foi feita apenas uma análise superficial na base de dados do Airbnb, porém já se percebeu que existem *outliers* em algumas das variáveis. \n",
         "\n",
-        "Também se notou que em algumas localidades há poucos imóveis disponíveis, o que pode distorcer as informações estatísticas de alguns atributos.\n",
+        "Também nota-se que em algumas localidades há poucos imóveis disponíveis, o que pode distorcer as informações estatísticas de alguns atributos.\n",
         "\n",
         "Por fim, lembra-se que este *dataset* é uma versão resumida, ideal apenas para uma abordagem inicial. Recomenda-se que seja usado, em uma próxima análise exploratória, o conjunto de dados completos, com 106 atributos disponíveis."
       ]
