--- a/Analisando_os_Dados_do_Airbnb.ipynb
+++ b/Analisando_os_Dados_do_Airbnb.ipynb
@@ -71,10 +71,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "vLIBnefmjJYo",
-        "outputId": "f34461f2-2d1d-4949-b4c6-40b35b15dbc8",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "colab": {}
       },
       "source": [
         "# importar os pacotes necessarios\n",
@@ -85,16 +82,7 @@
         "%matplotlib inline"
       ],
       "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.6/dist-packages/statsmodels/tools/_testing.py:19: FutureWarning: pandas.util.testing is deprecated. Use the functions in the public API at pandas.testing instead.\n",
-            "  import pandas.util.testing as tm\n"
-          ],
-          "name": "stderr"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
